@@ -1,45 +1,49 @@
 package br.com.abril.nds.service.impl;
 
+import java.util.Date;
 import java.util.List;
 
+import br.com.abril.nds.model.distribuicao.FixacaoRepartePdv;
+import br.com.abril.nds.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import br.com.abril.nds.dto.RepartePDVDTO;
-import br.com.abril.nds.model.cadastro.Cota;
 import br.com.abril.nds.model.cadastro.Produto;
 import br.com.abril.nds.model.cadastro.pdv.PDV;
 import br.com.abril.nds.model.cadastro.pdv.RepartePDV;
 import br.com.abril.nds.model.distribuicao.FixacaoReparte;
 import br.com.abril.nds.model.distribuicao.MixCotaProduto;
-import br.com.abril.nds.repository.CotaRepository;
-import br.com.abril.nds.repository.FixacaoReparteRepository;
-import br.com.abril.nds.repository.MixCotaProdutoRepository;
-import br.com.abril.nds.repository.PdvRepository;
-import br.com.abril.nds.repository.ProdutoRepository;
-import br.com.abril.nds.repository.RepartePDVRepository;
+import br.com.abril.nds.service.ProdutoService;
 import br.com.abril.nds.service.RepartePdvService;
 
 @Service
 public class RepartePdvServiceImpl implements RepartePdvService{
+
 	@Autowired
-	RepartePDVRepository repartePDVRepository;
+	private RepartePDVRepository repartePDVRepository;
+
+    @Autowired
+    private FixacaoRepartePdvRepository fixacaoRepartePdvRepository;
 	
 	@Autowired
-	FixacaoReparteRepository fixacaoReparteRepository;
+	private FixacaoReparteRepository fixacaoReparteRepository;
 	
 	@Autowired
-	MixCotaProdutoRepository mixCotaProdutoRepository;
+	private MixCotaProdutoRepository mixCotaProdutoRepository;
 	
 	@Autowired
-	CotaRepository  cotaRepository;
+	private CotaRepository  cotaRepository;
 	
 	@Autowired
-	ProdutoRepository produtoRepository;
+	private ProdutoRepository produtoRepository;
 	
 	@Autowired
-	PdvRepository pdvRepository;
+	private ProdutoService produtoService;
+	
+	@Autowired
+	private PdvRepository pdvRepository;
 
 	@Transactional
 	@Override
@@ -54,43 +58,13 @@ public class RepartePdvServiceImpl implements RepartePdvService{
 		return repartePDVRepository.obterRepartePdvMix(idMix, idProduto, idPdv);
 	}
 
-	@Override
-	@Transactional
-	public void salvarRepartesPDV(List<RepartePDVDTO> listaRepartes, String codProduto, String codCota, Long idFixacao) {
-		int soma = 0;
-		Cota cota=  cotaRepository.obterPorNumerDaCota(new Integer(codCota));
-		Produto produto= produtoRepository.obterProdutoPorCodigo(codProduto);
-		FixacaoReparte fixacaoReparte = fixacaoReparteRepository.buscarPorId(idFixacao);
-		PDV pdv = null;
-		
-		for (RepartePDVDTO repartePDVDTO : listaRepartes) {
-			if(repartePDVDTO.getCodigoPdv() !=null){
-				pdv= pdvRepository.buscarPorId(repartePDVDTO.getCodigoPdv());
-			}
-			RepartePDV repartePDV =  repartePDVRepository.obterRepartePorPdv(idFixacao, produto.getId(), pdv.getId());
-			if(repartePDV == null){
-				repartePDV = new RepartePDV();
-			}	
-			repartePDV.setFixacaoReparte(fixacaoReparte);
-			repartePDV.setPdv(pdv);
-			repartePDV.setReparte(repartePDVDTO.getReparte().intValue());
-			repartePDV.setProduto(produto);
-			
-			soma += repartePDV.getReparte();
-			repartePDVRepository.merge(repartePDV);
-		}
-		fixacaoReparte.setQtdeExemplares(soma);
-		fixacaoReparteRepository.alterar(fixacaoReparte);
-		
-	}
-
+	
 
 	@Override
 	@Transactional
-	public void salvarRepartesPDVMix(List<RepartePDVDTO> listaRepartes, String codProduto, String codCota, Long idMix) {
+	public void salvarRepartesPDVMix(List<RepartePDVDTO> listaRepartes, String codProduto, Long idMix) {
 		int soma = 0;
-		Cota cota=  cotaRepository.obterPorNumerDaCota(new Integer(codCota));
-		Produto produto= produtoRepository.obterProdutoPorCodigo(codProduto);
+		Produto produto= this.produtoService.obterProdutoPorCodigo(codProduto);
 		MixCotaProduto mixCotaProduto = mixCotaProdutoRepository.buscarPorId(idMix);
 		PDV pdv = null;
 		
@@ -110,10 +84,40 @@ public class RepartePdvServiceImpl implements RepartePdvService{
 			soma += repartePDV.getReparte();
 			repartePDVRepository.merge(repartePDV);
 		}
-		mixCotaProduto.setReparteMaximo(new Long(soma));
-		mixCotaProdutoRepository.alterar(mixCotaProduto);
-		
+
+		mixCotaProduto.setReparteMinimo(Long.valueOf(soma));
+		mixCotaProduto.setReparteMaximo(Long.valueOf(soma));
+        mixCotaProduto.setDataHora(new Date());
+        mixCotaProdutoRepository.alterar(mixCotaProduto);
 	}
-	
-	
+
+	@Override
+	@Transactional
+	public void salvarRepartesPDV(List<RepartePDVDTO> listaRepartes, String codProduto, Long idFixacao, boolean manterFixa) {
+		int soma = 0;
+		FixacaoReparte fixacaoReparte = fixacaoReparteRepository.buscarPorId(idFixacao);
+		fixacaoReparte.setManterFixa(manterFixa);
+		PDV pdv = null;
+		
+		for (RepartePDVDTO repartePDVDTO : listaRepartes) {
+			if(repartePDVDTO.getCodigoPdv() !=null) {
+				pdv = pdvRepository.buscarPorId(repartePDVDTO.getCodigoPdv());
+			}
+
+            FixacaoRepartePdv fixacaoRepartePdv = fixacaoRepartePdvRepository.obterPorFixacaoReparteEPdv(fixacaoReparte, pdv);
+            if(fixacaoRepartePdv == null) {
+                fixacaoRepartePdv = new FixacaoRepartePdv();
+			}
+			
+			fixacaoRepartePdv.setFixacaoReparte(fixacaoReparte);
+			fixacaoRepartePdv.setPdv(pdv);
+			fixacaoRepartePdv.setRepartePdv(repartePDVDTO.getReparte());
+
+			soma += fixacaoRepartePdv.getRepartePdv();
+			fixacaoRepartePdvRepository.merge(fixacaoRepartePdv);
+		}
+		fixacaoReparte.setDataHora(new Date());
+		fixacaoReparte.setQtdeExemplares(soma);
+		fixacaoReparteRepository.alterar(fixacaoReparte);
+	}
 }
